# Face-Recognition-with-CNN

./: .gitignore  annotate_video.py  find_face.py  predict_and_annotate.py  pyproject.toml  train_model.py
